--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Voice of the Fans (VOTF) - The ultimate platform for sports fans to connect, share, and make their voices heard. Join the global community today.">
   <title>Voice of the Fans (VOTF) - Connect. Share. Be Heard.</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/png" href="../assets/images/favicon.png">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   <!-- Navigation -->
