--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Contact Voice of the Fans (VOTF) - Get in touch with our team for support, feedback, or inquiries.">
   <title>Contact Us - Voice of the Fans (VOTF)</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/png" href="../assets/images/favicon.png">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   <!-- Navigation -->
