--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Voice of the Fans (VOTF) Privacy Policy - Learn how we protect your data and privacy.">
   <title>Privacy Policy - Voice of the Fans (VOTF)</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/png" href="../assets/images/favicon.png">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   <!-- Navigation -->
