--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Voice of the Fans (VOTF) Terms of Service - Read our terms and conditions for using the platform.">
   <title>Terms of Service - Voice of the Fans (VOTF)</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/png" href="../assets/images/favicon.png">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   <!-- Navigation -->
