--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       </a>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#how-it-works">How It Works</a></li>
-        <li><a href="#timeline">Timeline</a></li>
+        <li class="hide-on-mobile"><a href="#features">Features</a></li>
+        <li class="hide-on-mobile"><a href="#how-it-works">How It Works</a></li>
+        <li class="hide-on-mobile"><a href="#timeline">Timeline</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="privacy-policy.html">Privacy</a></li>
         <li><a href="terms-of-service.html">Terms</a></li>
