--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -36,10 +36,13 @@
     <h3>1.1 Personal Information</h3>
     <p>When you create an account, we collect the following information:</p>
     <ul>
-      <li>Username and email address</li>
-      <li>Profile information (sports preferences, favorite teams, divisions)</li>
-      <li>Continent and location information (if provided)</li>
-      <li>User-generated content (posts, comments, media, polls)</li>
+      <li>Username</li>
+      <li>Email address</li>
+      <li>First name (optional)</li>
+      <li>Last name (optional)</li>
+      <li>Country / location</li>
+      <li>Gender (optional)</li>
+      <li>Date of birth (optional; used for age verification)</li>
     </ul>
 
     <h3>1.2 Usage Information</h3>
@@ -48,16 +51,29 @@
       <li>Posts, comments, likes, dislikes, and reactions</li>
       <li>Channel and sub-channel preferences</li>
       <li>Interaction patterns and engagement metrics</li>
-      <li>Device information and IP address (for security purposes)</li>
     </ul>
+    <p>We do not currently collect device information or IP addresses as part of usage data. If this changes, we will update this Privacy Policy prior to such collection.</p>
 
     <h3>1.3 Technical Information</h3>
-    <p>We collect technical data to improve our services:</p>
+    <p>We collect limited technical data to improve our services:</p>
     <ul>
-      <li>Device type, operating system, and browser information</li>
-      <li>App version and usage statistics</li>
-      <li>Error logs and performance data</li>
+      <li>App version and aggregated usage statistics</li>
+      <li>Error logs and performance data that do not include your IP address</li>
     </ul>
+    <p>We do not currently collect device identifiers, device type, or IP addresses.</p>
+
+    <h3>1.4 Why We Collect Personal Information</h3>
+    <p>We collect the above information for the following purposes:</p>
+    <ul>
+      <li><strong>Username / Email address:</strong> Account creation, authentication, login recovery, and notifications</li>
+      <li><strong>First name / Last name (optional):</strong> Personalization, customer support, and legal compliance where applicable</li>
+      <li><strong>Country / location:</strong> Regional features, localization, and compliance with local laws and eligibility requirements</li>
+      <li><strong>Gender (optional):</strong> Personalization and aggregated analytics to improve content relevance</li>
+      <li><strong>Date of birth (optional):</strong> Age verification, eligibility checks, and aggregated analytics</li>
+    </ul>
+
+    <h3>1.5 Optional and Sensitive Information</h3>
+    <p>Some information you provide is optional and may be considered sensitive in certain jurisdictions (for example, date of birth). Where applicable, we use this information solely for the purposes described above, apply appropriate safeguards, and store it securely. You can choose not to provide optional fields; however, certain features (such as age-restricted content) may require date of birth for access.</p>
 
     <h2>2. How We Use Your Information</h2>
     <p>We use the collected information for the following purposes:</p>
@@ -149,7 +165,7 @@
     <h2>11. Contact Us</h2>
     <p>If you have questions, concerns, or requests regarding this Privacy Policy or your personal information, please contact us:</p>
     <ul>
-      <li>Email: <a href="mailto:privacy@votf.app">privacy@votf.app</a></li>
+      <li>Email: <a href="mailto:bontibenjamin2@gmail.com">bontibenjamin2@gmail.com</a></li>
       <li>Visit our <a href="contact.html">Contact Page</a> for more ways to reach us</li>
     </ul>
 
