--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -171,7 +171,7 @@
     <h2>16. Contact Information</h2>
     <p>For questions about these Terms, please contact us:</p>
     <ul>
-      <li>Email: <a href="mailto:legal@votf.app">legal@votf.app</a></li>
+      <li>Email: <a href="mailto:legal@votf.app">bontibenjamin2@gmail.com</a></li>
       <li>Visit our <a href="contact.html">Contact Page</a> for more ways to reach us</li>
     </ul>
 
