--- a/contact.html
+++ b/contact.html
@@ -30,87 +30,51 @@
     <h1>Contact Us</h1>
     <p>We'd love to hear from you! Whether you have questions, feedback, or need support, our team is here to help.</p>
 
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem; margin: 3rem 0;">
-      <div class="feature-card">
+    <div class="contact-grid">
+      <a class="feature-card" href="mailto:bontibenjamin2@gmail.com">
         <div class="feature-icon">📧</div>
         <h3>General Inquiries</h3>
         <p>For general questions about VOTF, please email us at:</p>
-        <p style="margin-top: 1rem;"><a href="mailto:info@votf.app">info@votf.app</a></p>
-      </div>
+        <p class="email-address">bontibenjamin2@gmail.com</p>
+      </a>
 
-      <div class="feature-card">
+      <a class="feature-card" href="mailto:b2000anderson@gmail.com">
         <div class="feature-icon">🛟</div>
         <h3>Support & Help</h3>
         <p>Need technical support or account assistance? Reach out to:</p>
-        <p style="margin-top: 1rem;"><a href="mailto:support@votf.app">support@votf.app</a></p>
-      </div>
+        <p class="email-address">b2000anderson@gmail.com</p>
+      </a>
 
-      <div class="feature-card">
+      <a class="feature-card" href="mailto:bontibenjamin2@gmail.com">
         <div class="feature-icon">🔒</div>
         <h3>Privacy & Security</h3>
         <p>For privacy concerns or security issues, contact:</p>
-        <p style="margin-top: 1rem;"><a href="mailto:privacy@votf.app">privacy@votf.app</a></p>
-      </div>
+        <p class="email-address">bontibenjamin2@gmail.com</p>
+      </a>
 
-      <div class="feature-card">
+      <a class="feature-card" href="mailto:bontibenjamin2@gmail.com">
         <div class="feature-icon">⚖️</div>
         <h3>Legal Matters</h3>
         <p>For legal inquiries, terms, or compliance questions:</p>
-        <p style="margin-top: 1rem;"><a href="mailto:legal@votf.app">legal@votf.app</a></p>
-      </div>
+        <p class="email-address">bontibenjamin2@gmail.com</p>
+      </a>
 
-      <div class="feature-card">
+      <a class="feature-card" href="mailto:b2000anderson@gmail.com">
         <div class="feature-icon">🤝</div>
         <h3>Partnerships</h3>
         <p>Interested in partnering with VOTF? Get in touch:</p>
-        <p style="margin-top: 1rem;"><a href="mailto:partners@votf.app">partners@votf.app</a></p>
-      </div>
+        <p class="email-address">b2000anderson@gmail.com</p>
+      </a>
 
-      <div class="feature-card">
+      <a class="feature-card" href="mailto:b2000anderson@gmail.com">
         <div class="feature-icon">📰</div>
         <h3>Media & Press</h3>
         <p>For media inquiries, press releases, or interviews:</p>
-        <p style="margin-top: 1rem;"><a href="mailto:press@votf.app">press@votf.app</a></p>
-      </div>
+        <p class="email-address">b2000anderson@gmail.com</p>
+      </a>
     </div>
 
-    <h2>Send Us a Message</h2>
-    <p>Fill out the form below, and we'll get back to you as soon as possible.</p>
-
-    <form class="contact-form" action="#" method="POST" onsubmit="return handleFormSubmit(event)">
-      <div class="form-group">
-        <label for="name">Name *</label>
-        <input type="text" id="name" name="name" required>
-      </div>
-
-      <div class="form-group">
-        <label for="email">Email Address *</label>
-        <input type="email" id="email" name="email" required>
-      </div>
-
-      <div class="form-group">
-        <label for="subject">Subject *</label>
-        <select id="subject" name="subject" required style="width: 100%; padding: 0.75rem; background: var(--dark-bg); border: 1px solid var(--border-color); border-radius: 8px; color: var(--text-primary); font-size: 1rem; font-family: inherit;">
-          <option value="">Select a subject...</option>
-          <option value="general">General Inquiry</option>
-          <option value="support">Technical Support</option>
-          <option value="account">Account Issues</option>
-          <option value="privacy">Privacy Concern</option>
-          <option value="legal">Legal Matter</option>
-          <option value="partnership">Partnership Inquiry</option>
-          <option value="media">Media Inquiry</option>
-          <option value="feedback">Feedback</option>
-          <option value="other">Other</option>
-        </select>
-      </div>
-
-      <div class="form-group">
-        <label for="message">Message *</label>
-        <textarea id="message" name="message" rows="6" required></textarea>
-      </div>
-
-      <button type="submit" class="cta-button" style="width: 100%;">Send Message</button>
-    </form>
+    
 
     <div style="margin-top: 3rem; padding: 2rem; background: var(--dark-secondary); border-radius: 16px; border-left: 4px solid var(--primary-color);">
       <h3 style="margin-top: 0; color: var(--primary-color);">Response Time</h3>
